--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -543,6 +543,12 @@ D: Add your SREs to a group and then add this group to roles/accessapproval.appr
 
 Answer: D
 
+- Grant the Access Approval Approver (roles/accessapproval.approver) IAM role on the project, folder, or organization to the principal who you want to be able to perform approvals.
+
+**Links:**
+
+1.https://cloud.google.com/cloud-provider-access-management/access-approval/docs/approve-requests
+
 <hr />
 
 **Question 122**
@@ -558,6 +564,16 @@ D: Enable deletion protection on the instance.
 
 Answer: D
 
+```
+//--- When creating a VM instance, include either the --deletion-protection or no-deletion-protection flags. Deletion protection is disabled by default so to enable deletion protection:
+gcloud compute instances create [INSTANCE_NAME] --deletion-protection
+
+//--- To disable deletion protection during creation:
+gcloud compute instances create [INSTANCE_NAME] --no-deletion-protection
+```
+
+- https://cloud.google.com/compute/docs/instances/preventing-accidental-vm-deletion
+
 <hr />
 
 **Question 123**
@@ -571,7 +587,9 @@ C: Create a custom role by removing delete permissions, and add users to that ro
 
 D: Create a custom role by removing delete permissions. Add users to the group, and then add the group to the custom role.
 
-Answer: A
+Answer: A (A or D but I select A)
+
+- Since roles/bigquery user role doesn't have delete permission, as per the GCP best practice, if we do not have pre-defined roles to perform an action, then go for custom role.
 
 <hr />
 
@@ -588,6 +606,14 @@ D: Install the cloud-datastore-emulator component using the gcloud components in
 
 Answer: D
 
+- From: https://cloud.google.com/datastore/docs/tools/datastore-emulator which said clearly
+  gcloud components install cloud-datastore-emulator So D is correct
+
+```
+///--- The Datastore emulator is a component of the Google Cloud CLI's gcloud CLI. Use the gcloud components install command to install the Datastore emulator:
+gcloud components install cloud-datastore-emulator
+```
+
 <hr />
 
 **Question 125**
@@ -603,6 +629,16 @@ D: Add the users to a group, and add this group to roles/iam.roleViewer role.
 
 Answer: C
 
+**Browser (roles/browser)**
+
+- Read access to browse the hierarchy for a project, including the folder, organization, and allow policy. This role doesn't include permission to view resources in the project.
+- Lowest-level resources where you can grant this role:
+- Project
+
+**Links:**
+
+https://cloud.google.com/iam/docs/understanding-roles#browser
+
 <hr />
 
 Question 126
@@ -616,7 +652,15 @@ C: Obtain OAuth 2.0 credentials, configure the user consent screen, and set up O
 
 D: Obtain OAuth 2.0 credentials, configure the user consent screen, and set up OAuth 2.0 for Web Server Applications.
 
-Answer: A
+Answer: A (B is correct)
+
+- If your existing authentication system supports SAML2, SSO configuration is as simple as 3 links and a certificate, as shown on this slide.
+
+![](images/126.png)
+
+Links:
+
+https://cloud.google.com/blog/products/identity-security/using-your-existing-identity-management-system-with-google-cloud-platform
 
 <hr />
 
@@ -678,6 +722,16 @@ Answer: D
 
 - Creating an autoscaling GPU node pool
   To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.
+
+- GPU_TYPE: the GPU type, either nvidia-tesla-k80, nvidia-tesla-p100, nvidia-tesla-p4, nvidia-tesla-v100, nvidia-tesla-t4, nvidia-tesla-a100, or nvidia-a100-80gb.
+
+```
+gcloud container node-pools create POOL_NAME \
+  --accelerator type=GPU_TYPE,count=AMOUNT \
+  --zone COMPUTE_ZONE --cluster CLUSTER_NAME \
+  [--num-nodes 3 --min-nodes 0 --max-nodes 5 --enable-autoscaling
+  --machine-type a2-highgpu-1g]
+```
 
 **Links:**
 
