--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -762,7 +762,7 @@ https://cloud.google.com/architecture/identity/federating-gcp-with-active-direct
 <hr />
 
 Question 131
-You have successfully created a development environment in a project for an application. This application uses Compute Engine and Cloud SQL. Now you need to create a production environment for this application. The security team has forbidden the existence of network routes between these 2 environments and has asked you to follow Google-recommended practices. What should you do?
+You have successfully created a development environment in a project for an application. This application uses Compute Engine and Cloud SQL. Now you need to create a production environment for this application. **The security team has forbidden the existence of network routes between these 2 environments** and has asked you to follow Google-recommended practices. What should you do?
 
 A: Create a new project, enable the Compute Engine and Cloud SQL APIs in that project, and replicate the setup you have created in the development environment.
 
@@ -773,6 +773,8 @@ C: Create a new project, modify your existing VPC to be a Shared VPC, share that
 D: Ask the security team to grant you the Project Editor role in an existing production project used by another division of your company. Once they grant you that role, replicate the setup you have in the development environment in that project.
 
 Answer: A
+
+- A - correct. Best practice is to create a new project for each environment, such as production and testing. There are no routes between VPCs in these projects **by default**, so that satisfies the requirement by the security team.
 
 <hr />
 
@@ -904,6 +906,9 @@ Answer: A
 - ALPHA: The role is still being developed or tested, or it includes permissions for Google Cloud services or features that are not yet public. It is not ready for widespread use.
 - BETA: The role has been tested on a limited basis, or it includes permissions for Google Cloud services or features that are not generally available.
 - GA: The role has been widely tested, and all of its permissions are for Google Cloud services or features that are generally available.
+- **SUPPORTED** The permission is fully supported in custom roles.
+- **TESTING** Google is testing the permission to check its compatibility with custom roles. You can include the permission in custom roles, but you might see unexpected behavior. Not recommended for production use.
+- **NOT_SUPPORTED** The permission is not supported in custom roles.
 
 **Links:**
 https://cloud.google.com/iam/docs/understanding-custom-roles#testing_and_deploying
@@ -979,6 +984,12 @@ D: Delete the current instance template and replace it with a new instance templ
 
 Answer: C
 
+**The boot disk already exists**
+
+-By default, a new boot persistent disk is created when you create an instance. The name of the boot disk matches the name of the VM. If you name a VM my-instance, the disk is also named my-instance. If a persistent disk already exists with that name, the request fails. To resolve this issue, you can optionally take a snapshot, and then delete the existing persistent disk.
+
+- https://cloud.google.com/compute/docs/troubleshooting/troubleshooting-migs#the_boot_disk_already_exists
+- [Lab Review: Configuring an HTTP Load Balancer with Autoscaling](https://www.youtube.com/watch?v=a890xluKfwI)
 <hr />
 
 Question 143
