--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -986,10 +986,14 @@ Answer: C
 
 **The boot disk already exists**
 
--By default, a new boot persistent disk is created when you create an instance. The name of the boot disk matches the name of the VM. If you name a VM my-instance, the disk is also named my-instance. If a persistent disk already exists with that name, the request fails. To resolve this issue, you can optionally take a snapshot, and then delete the existing persistent disk.
+- By default, a new boot persistent disk is created when you create an instance. The name of the boot disk matches the name of the VM. If you name a VM my-instance, the disk is also named my-instance. If a persistent disk already exists with that name, the request fails. To resolve this issue, you can optionally take a snapshot, and then delete the existing persistent disk.[1]
 
-- https://cloud.google.com/compute/docs/troubleshooting/troubleshooting-migs#the_boot_disk_already_exists
-- [Lab Review: Configuring an HTTP Load Balancer with Autoscaling](https://www.youtube.com/watch?v=a890xluKfwI)
+**Links:**
+
+1. https://cloud.google.com/compute/docs/troubleshooting/troubleshooting-migs#the_boot_disk_already_exists
+2. [Lab Review: Configuring an HTTP Load Balancer with Autoscaling](https://www.youtube.com/watch?v=a890xluKfwI)
+3. [MIGs](https://github.com/hirokoymj/gcp-study-note/blob/master/qwiklabs/lab-HTTP-Load-Balancer.md)
+
 <hr />
 
 Question 143
