--- a/study-app/q1-50.md
+++ b/study-app/q1-50.md
@@ -286,6 +286,12 @@ C: Create a managed instance group based on the instance template. Configure aut
 
 D: Create the necessary amount of instances required for peak user traffic based on the instance template. Create an unmanaged instance group and add the instances to that instance group. Configure the instance group as the Backend Service of an HTTP load balancer.
 
+Answer: C is correct because a managed instance group can use an instance template to scale based on HTTP traffic.
+
+Links:
+
+1. https://cloud.google.com/compute/docs/instance-groups/#managed_instance_groups_and_autoscaling
+
 <hr />
 
 **Question 11**
