--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -592,6 +592,12 @@ D: Create a new instance template with the new application version. Update the e
 
 Answer: B
 
+**Links:**
+
+1. https://cloud.google.com/compute/docs/instance-groups/rolling-out-updates-to-managed-instance-groups#starting_a_basic_rolling_update
+
+https://cloud.google.com/compute/docs/instance-groups/rolling-out-updates-to-managed-instance-groups#max_surge
+
 <hr />
 
 **Question 79**
