--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -596,7 +596,26 @@ Answer: B
 
 1. https://cloud.google.com/compute/docs/instance-groups/rolling-out-updates-to-managed-instance-groups#starting_a_basic_rolling_update
 
-https://cloud.google.com/compute/docs/instance-groups/rolling-out-updates-to-managed-instance-groups#max_surge
+**Instance Template v1,v2**
+![](images/78-instance-template.png)
+
+**Migs for v1**
+![](images/78-migs.png)
+
+**Edit Migs from template v1 to v2**
+![](images/78-maxSurge.png)
+
+**Migs is updating to v2**
+![](images/78-updating-migs.png)
+
+**maxSurge/maxUnavailable**
+![](images/78-mig-updater.png)
+
+```
+gcloud compute instance-groups managed rolling-action start-update INSTANCE_GROUP_NAME \
+    --version=template=INSTANCE_TEMPLATE_NAME
+    [--zone=ZONE | --region=REGION]
+```
 
 <hr />
 
