--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -44,8 +44,20 @@ D: Add a new, GPU-enabled, node pool to the GKE cluster. Ask your ML team to add
 
 Answer: D
 
+**GKE**
+
 - [GKE] -> [Cluster:node(vm), node(vm), node(vm)] -> [node(vm):pod(container),pod(container),pod(container)]
+
+**Creating an autoscaling GPU node pool**
+
 - To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.[1]
+
+```
+gcloud container node-pools create p100 \
+  --accelerator type=nvidia-tesla-p100,count=2 \
+  --zone us-central1-c --cluster p100-cluster \
+  --num-nodes 3 --min-nodes 0 --max-nodes 5 --enable-autoscaling
+```
 
 **Links:**
 
@@ -723,19 +735,27 @@ Answer: D
 - Creating an autoscaling GPU node pool
   To take the best, most cost-effective advantage of GPUs on GKE, and to take advantage of cluster autoscaling, we recommend creating separate GPU node pools in your clusters.
 
-- GPU_TYPE: the GPU type, either nvidia-tesla-k80, nvidia-tesla-p100, nvidia-tesla-p4, nvidia-tesla-v100, nvidia-tesla-t4, nvidia-tesla-a100, or nvidia-a100-80gb.
+```
+gcloud container node-pools create p100 \
+  --accelerator type=nvidia-tesla-p100,count=2 \
+  --zone us-central1-c --cluster p100-cluster \
+  --num-nodes 3 --min-nodes 0 --max-nodes 5 --enable-autoscaling
+```
 
-```
-gcloud container node-pools create POOL_NAME \
-  --accelerator type=GPU_TYPE,count=AMOUNT \
-  --zone COMPUTE_ZONE --cluster CLUSTER_NAME \
-  [--num-nodes 3 --min-nodes 0 --max-nodes 5 --enable-autoscaling
-  --machine-type a2-highgpu-1g]
-```
+**GKE basic[1]**
+
+- GKE clusters have two modes: **Autopilot** and **Standard**
+- The GKE environment consists of multiple machines (specifically, VM instances) grouped together to form a cluster.
+- GKE standard architecture
+- In GKE, a cluster consists of at least one control plane and multiple worker machines called nodes.
 
 **Links:**
 
-https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#gpu_pool
+1. https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#gpu_pool
+2. https://cloud.google.com/kubernetes-engine/docs/concepts/kubernetes-engine-overview
+3. https://cloud.google.com/kubernetes-engine/docs/concepts/cluster-architecture
+
+![](images/129.png)
 
 <hr />
 
