--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -557,6 +557,10 @@ Answer: D
 
 - Grant the Access Approval Approver (roles/accessapproval.approver) IAM role on the project, folder, or organization to the principal who you want to be able to perform approvals.
 
+**Overview of Access Approval**
+
+- For example, front-line customer support personnel can only access information about customer environments that is absolutely essential for debugging customer support issues.
+
 **Links:**
 
 1.https://cloud.google.com/cloud-provider-access-management/access-approval/docs/approve-requests
@@ -748,14 +752,18 @@ gcloud container node-pools create p100 \
 - The GKE environment consists of multiple machines (specifically, VM instances) grouped together to form a cluster.
 - GKE standard architecture
 - In GKE, a cluster consists of at least one control plane and multiple worker machines called nodes.
+- **Create a GKE cluster**: A cluster consists of at least one cluster control plane machine and multiple worker machines called nodes. Nodes are Compute Engine virtual machine (VM) instances that run the Kubernetes processes necessary to make them part of the cluster. You deploy applications to clusters, and the applications run on the nodes.
 
 **Links:**
 
 1. https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#gpu_pool
 2. https://cloud.google.com/kubernetes-engine/docs/concepts/kubernetes-engine-overview
 3. https://cloud.google.com/kubernetes-engine/docs/concepts/cluster-architecture
+4. [Creating GKE clusters](https://www.youtube.com/watch?v=Xv6Y1R0fyZs&list=PLuJRcdtonlDAN73rZsRk_eiJ0NU9h1Cms&index=17)
 
 ![](images/129.png)
+![](images/129-cluster-2.png)
+![](images/129-cluster-1.png)
 
 <hr />
 
