--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -754,12 +754,22 @@ gcloud container node-pools create p100 \
 - In GKE, a cluster consists of at least one control plane and multiple worker machines called nodes.
 - **Create a GKE cluster**: A cluster consists of at least one cluster control plane machine and multiple worker machines called nodes. Nodes are Compute Engine virtual machine (VM) instances that run the Kubernetes processes necessary to make them part of the cluster. You deploy applications to clusters, and the applications run on the nodes.
 
+**Connect to the cluster**
+
+1. Actions --> Connect. [5]
+2. Copy the below command.
+
+```
+gcloud container clusters get-credentials autopilot-cluster --region us-east1 --project autopilot-test
+```
+
 **Links:**
 
 1. https://cloud.google.com/kubernetes-engine/docs/how-to/gpus#gpu_pool
 2. https://cloud.google.com/kubernetes-engine/docs/concepts/kubernetes-engine-overview
 3. https://cloud.google.com/kubernetes-engine/docs/concepts/cluster-architecture
 4. [Creating GKE clusters](https://www.youtube.com/watch?v=Xv6Y1R0fyZs&list=PLuJRcdtonlDAN73rZsRk_eiJ0NU9h1Cms&index=17)
+5. https://cloud.google.com/kubernetes-engine/docs/how-to/creating-an-autopilot-cluster#console_3
 
 ![](images/129.png)
 ![](images/129-cluster-2.png)
