--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -750,18 +750,13 @@ gcloud container node-pools create p100 \
 
 - GKE clusters have two modes: **Autopilot** and **Standard**
 - The GKE environment consists of multiple machines (specifically, VM instances) grouped together to form a cluster.
-- GKE standard architecture
 - In GKE, a cluster consists of at least one control plane and multiple worker machines called nodes.
 - **Create a GKE cluster**: A cluster consists of at least one cluster control plane machine and multiple worker machines called nodes. Nodes are Compute Engine virtual machine (VM) instances that run the Kubernetes processes necessary to make them part of the cluster. You deploy applications to clusters, and the applications run on the nodes.
+- **Connect to the cluster**: 1. Actions --> Connect. [5], 2. Copy the below command.
 
-**Connect to the cluster**
-
-1. Actions --> Connect. [5]
-2. Copy the below command.
-
-```
-gcloud container clusters get-credentials autopilot-cluster --region us-east1 --project autopilot-test
-```
+  ```
+  gcloud container clusters get-credentials autopilot-cluster --region us-east1 --project autopilot-test
+  ```
 
 **Links:**
 
