--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -1174,9 +1174,21 @@ Answer: B
 
 - if so it has been assigned with jobUser it has privilege to access all datasets in that project and it is access violation
 
+**App Engine default service account**
+project-id@appspot.gserviceaccount.com
+
+**Compute Engine default service account**
+project-number-compute@developer.gserviceaccount.com
+
+| Service                                | Email address                                        |
+| -------------------------------------- | ---------------------------------------------------- |
+| App Engine default service account     | project-id@appspot.gserviceaccount.com               |
+| Compute Engine default service account | project-number-compute@developer.gserviceaccount.com |
+
 Links:
 
 1. https://www.examtopics.com/discussions/google/view/28670-exam-associate-cloud-engineer-topic-1-question-130/
+2. https://cloud.google.com/iam/docs/service-accounts#default
 
 <hr />
 
@@ -1223,6 +1235,19 @@ D: Install and configure the Cloud Logging Agent and view the logs from Cloud Lo
 
 Answer: D
 
+- Cloud logging without agent only works for App engine as you stated . but the question is about the compute engine which has to be equipped first with Logging Agent in order to write logs into Cloud Logging. so based your assumption the correct answer is "D"
+
+**Installing the Cloud Logging agent on individual VMs**
+
+- The VM images for Compute Engine and Amazon Elastic Compute Cloud (EC2) don't include the Logging agent, so you must complete these steps to install it on those instances. The agent runs under both Linux and Windows.[1]
+
+- If your VMs are running in Google Kubernetes Engine or App Engine, the agent is already included in the VM image, so you can skip this page.[1]
+
+- Similar to the Cloud Monitoring agent, it’s a best practice to install the Logging agent on all your VM instances.[textbook]
+
+**Links:**
+https://cloud.google.com/logging/docs/agent/logging/installation
+
 <hr />
 
 Question 154
@@ -1236,7 +1261,14 @@ C: Create a Shared VPC network between both projects. Grant the VM Service Accou
 
 D: Make corp-aggregate-reports-storage public and create a folder with a pseudo-randomized suffix name. Share the folder with the IoT team.
 
-Answer: C
+Answer: C(B is correct)
+
+**Cross project management using service account**
+You should be able to add a service account to another project:
+
+**Links:**
+
+1. https://stackoverflow.com/questions/35479025/cross-project-management-using-service-account/35558464#35558464
 
 <hr />
 
@@ -1417,6 +1449,16 @@ D: Use the Reports view in the Cloud Billing Console to view the desired cost in
 
 Answer: A
 
+- Cloud Billing export to BigQuery enables you to export detailed Google Cloud billing data (such as usage, cost estimates, and pricing data) automatically throughout the day to a BigQuery dataset that you specify. Then you can access your Cloud Billing data from BigQuery for detailed analysis, or use a tool like Looker Studio to visualize your data.
+
+- You can combine Cloud Billing data export to BigQuery with Looker Studio to stay up to date on your Google Cloud costs.
+
+Links:
+https://cloud.google.com/billing/docs/how-to/export-data-bigquery
+https://cloud.google.com/billing/docs/how-to/visualize-data
+
+![](images/162.png)
+
 <hr />
 
 **Question 163**
@@ -1432,6 +1474,14 @@ D: Create a route on the VPC to route all traffic to the instance over the VPN t
 
 Answer: A
 
+**Cloud VPN**
+
+- VPC and on-premises
+- VPC: us-east1 and us-west1 - Internal IP
+- These resources are able to communicate using their **internal IP addresses** because routing within a network is automatically configured (assuming that firewall rules allow the communication)
+
+![](images/163.png)
+
 <hr />
 
 **Question 164**
@@ -1446,6 +1496,16 @@ C: Apply the changes in a development environment, run gcloud compute instances 
 D: Apply the changes in a development environment, run gcloud compute instances list, and then save the output in Cloud Source Repositories.
 
 Answer: B
+
+```
+gcloud deployment-manager deployments create my-deployment --config=config.yaml --description="My deployment"
+```
+
+**Links:**
+
+1. https://cloud.google.com/deployment-manager/docs/manage-cloud-resources-deployment
+
+2. [vm.yaml](https://github.com/GoogleCloudPlatform/deploymentmanager-samples/blob/HEAD/examples/v2/quick_start/vm.yaml)
 
 <hr />
 
@@ -1587,9 +1647,18 @@ Answer: A
 - **Fault tolerance** is the property that enables a system to continue operating properly in the event of the failure of one or more faults
 - Preemptible VMs always stop after 24 hours. Preemptible VMs are recommended only for fault-tolerant applications[1]
 
+**What is a preemptible instance?**
+
+- Preemptible VM instances are available at much lower price—a 60-91% discount—compared to the price of standard VMs.
+
+- If your apps are fault-tolerant and can withstand possible instance preemptions, then preemptible instances can reduce your Compute Engine costs significantly.
+
+- For example, batch processing jobs can run on preemptible instances. If some of those instances stop during processing, the job slows but does not completely stop. Preemptible instances complete your batch processing tasks without placing additional workload on your existing instances and without requiring you to pay full price for additional normal instances.
+
 **Links:**
 
-1. https://cloud.google.com/compute/docs/instances/create-use-preemptible
+1. https://cloud.google.com/compute/docs/instances/preemptible
+
 <hr />
 
 **Question 172**
@@ -1613,11 +1682,15 @@ Answer: A
 - deny ingress rule.
 - Answer will not be D, because Egress traffic is Allowed by default. You will have to explicitly set the rule blocking outbound traffic.
 
+**Priority**
+
+- The firewall rule priority is an integer from 0 to 65535, inclusive. Lower integers indicate higher priorities. If you do not specify a priority when creating a rule, it is assigned a priority of 1000.
+
 **Links:**
 
 1. https://cloud.google.com/vpc/docs/firewalls#default_firewall_rules
-
-<hr />
+2. https://cloud.google.com/vpc/docs/firewalls#priority_order_for_firewall_rules
+3. <hr />
 
 **Question 173**
 Your company runs its Linux workloads on Compute Engine instances. Your company will be working with a new operations partner that does not use Google Accounts. You need to grant access to the instances to your operations partner so they can maintain the installed tooling. What should you do?
@@ -1780,9 +1853,7 @@ D: Create a bash script that contains all requirement steps as gcloud commands.
 
 Answer: A
 
--
--
-- <hr />
+<hr />
 
 **Question 182**
 You are performing a monthly security check of your Google Cloud environment and want to know who has access to view data stored in your Google Cloud Project.
@@ -1804,6 +1875,7 @@ Answer: B (Correct is B not A - "who has access to view data")
 <hr />
 
 **Question 183**
+
 Your company has embraced a hybrid cloud strategy where some of the applications are deployed on Google Cloud. A Virtual Private Network (VPN) tunnel connects your Virtual Private Cloud (VPC) in Google Cloud with your company's on-premises network. Multiple applications in Google Cloud need to connect to an on-premises database server, and you want to avoid having to change the IP configuration in all of your applications when the IP of the database changes.
 
 What should you do?
@@ -1943,9 +2015,12 @@ Answer: D (correct)
 - Answer is D, cell phones are sending UDP packets and the only that can receive that type of traffic is a External Network TCP/UDP
   https://cloud.google.com/load-balancing/docs/network
 
-Links:
+**Links:**
 
-https://cloud.google.com/load-balancing/docs/load-balancing-overview#about
+1. https://cloud.google.com/load-balancing/docs/load-balancing-overview#about
+
+![](images/188-1.png)
+![](images/188-2.png)
 
 <hr />
 
