--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -2059,6 +2059,8 @@ Answer: B
 gcloud auth activate-service-account SERVICE_ACCOUNT@DOMAIN.COM --key-file=/path/key.json --project=PROJECT_ID
 ```
 
+- Use gcloud auth list to view credentialed accounts.
+
 **Links:**
 
 https://cloud.google.com/sdk/gcloud/reference/auth/activate-service-account
