--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -446,6 +446,13 @@ D: Stop the VM, increase the memory to 8 GB, and start the VM.
 
 Answer: D
 
+- D is correct. If you pay attention to the question, option C mentions n1-standard-8. That instance type has **8vCPUs** and 30 GB RAM, and we only need 8GB. On top of that, it is possible to use custom machine type to adjust current VM RAM to the value we need. Got the answer from this course I did to prepare the exam: https://www.udemy.com/course/google-cloud-associate-engineer-exam-practice-tests/?couponCode=21CDE6A4C2B95F79BD97
+  good luck!
+
+Links:
+
+1. https://www.examtopics.com/discussions/google/view/16710-exam-associate-cloud-engineer-topic-1-question-49-discussion/
+
 <hr />
 
 **Question 71**
