--- a/study-app/q51-99.md
+++ b/study-app/q51-99.md
@@ -446,12 +446,13 @@ D: Stop the VM, increase the memory to 8 GB, and start the VM.
 
 Answer: D
 
-- D is correct. If you pay attention to the question, option C mentions n1-standard-8. That instance type has **8vCPUs** and 30 GB RAM, and we only need 8GB. On top of that, it is possible to use custom machine type to adjust current VM RAM to the value we need. Got the answer from this course I did to prepare the exam: https://www.udemy.com/course/google-cloud-associate-engineer-exam-practice-tests/?couponCode=21CDE6A4C2B95F79BD97
-  good luck!
+- D is correct. If you pay attention to the question, option C mentions n1-standard-8. That instance type has **8vCPUs** and 30 GB RAM, and we only need 8GB. On top of that, it is possible to use custom machine type to adjust current VM RAM to the value we need.
 
 Links:
 
 1. https://www.examtopics.com/discussions/google/view/16710-exam-associate-cloud-engineer-topic-1-question-49-discussion/
+
+![](images/70.png)
 
 <hr />
 
@@ -725,19 +726,22 @@ C: Package it in a container image, and run it on Kubernetes Engine, using n1-st
 D: Run it on Compute Engine, choose the instance type n1-standard-1, and add an SSD persistent disk of 32 GB.
 
 Answer: A
+Memorystore in Redis
+![](images/83-memorystore-price.png)
 
-```
-Memorystore
-Reduce latency with scalable, secure, and highly available in-memory service for Redis and Memcached.
-https://cloud.google.com/memorystore
+**n1-standard-1**
+![](images/83-n1-stanadrd-1.png)
 
-https://cloud.google.com/memorystore/docs/redis/redis-overview#what_its_good_for
+**n1-standard-32**
+![](images/83-n1-standard-32.png)
 
-- Memorystore for Redis provides a fast, in-memory store for use cases that require fast, real-time processing of data.
-- Caching
-- Gaming
-- Stream Processing: Whether processing a Twitter feed
-```
+![](images/83-memorystore.png)
+
+![](images/83-custom.png)
+
+Links:
+
+1. https://cloud.google.com/compute/docs/instances/creating-instance-with-custom-machine-type#create
 
 <hr />
 
