--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -265,6 +265,8 @@ D: Start the VM using Compute Engine default settings, and adjust as you go base
 
 Answer: A
 
+![](images/110.png)
+
 https://cloud.google.com/compute/docs/machine-resource#machine_type_comparison
 
 <hr />
