--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -166,6 +166,24 @@ D: Create a Hadoop cluster and copy the AVRO file to NDFS by compressing it. Loa
 
 Answer: C
 
+- C is correct: https://cloud.google.com/bigquery/external-data-sources
+
+- C. is correct,
+  An external data source is a data source that you can query directly from BigQuery, even though the data is not stored in BigQuery storage.
+
+BigQuery supports the following external data sources:
+
+- Amazon S3
+- Azure Storage
+- Cloud Bigtable
+- Cloud Spanner
+- Cloud SQL
+- Cloud Storage
+- Drive
+
+![](images/106-1.png)
+![](images/106-2.png)
+
 <hr />
 
 **Question 107**
@@ -196,6 +214,8 @@ D: Add a network tag of your choice to the instance running the LDAP server. Cre
 
 Answer: C
 
+- C is correct as you can use tags and then set firewall rules for instances with such tag.
+-
 - Tags enable you to make firewall rules and routes applicable to specific VM instances.
 
 https://cloud.google.com/vpc/docs/add-remove-network-tags
@@ -242,9 +262,12 @@ https://cloud.google.com/billing/docs/how-to/budgets#create-budget
   > billing.budgets.\*
 
 - Billing Account Costs Manager[2]
+
   > billing.budgets.\*
 
-**Links:**
+- You need billing admin not a project admin .. A is right
+
+  **Links:**
 
 1. https://cloud.google.com/billing/docs/how-to/billing-access#billing.admin
 
@@ -335,6 +358,15 @@ D: Select Regional Storage. Add a bucket lifecycle rule that archives data after
 Answer: D
 
 - Standard(0 day), Nearline(30 days), Coldline(90 days), Archive (365 days)
+- Multi-Region, Dual Region, Region
+- Standard storage == hot data
+  Links:
+
+1. https://cloud.google.com/storage/docs/storage-classes
+
+![](images/113-1.png)
+![](images/113-2.png)
+![](images/113-3.png)
 
 <hr />
 
