--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -143,6 +143,13 @@ gcloud config configurations activate my-config
 ```
 // To list all instances in a project in table form, run:
 gcloud compute instances list
+gsutil ls gs://my-demo-bucket-1212/
+gsutil cp gs://my-demo-bucket-1212/hawaii.jpg gs://hiroko-bucket-demo-1229/
+```
+
+```
+ gsutil mb -c nearline gs://hiroko-bucket-demo-1229
+
 ```
 
 **Links:**
