--- a/study-app/100-199.md
+++ b/study-app/100-199.md
@@ -115,6 +115,20 @@ Answer: B
 - G Suite is now Google Workspace
 - The Organization resource is closely associated with a Google Workspace or Cloud Identity account.
 
+- There are five different types of members: Google Accounts, Service Accounts, Google Groups, Google Workspace domains, and Cloud Identity domains.
+
+- A Workspace domain represents a virtual group of all the Google accounts that have been created in an organization's Workspace account. Workspace domains represent your organization's internet domain name, such as example.com, and when you add a user to your Workspace domain, a new Google account is created for the user inside this virtual group, such as usename@example.com.
+
+- Google Cloud customers who are not Workspace customers can get these same capabilities through Cloud Identity.
+
+- Cloud Identity is an Identity as a Service (IDaaS) solution that centrally manages users and groups. You can configure Cloud Identity to federate identities between Google and other identity providers, such as Active Directory and Azure Active Directory.[1]
+
+![](images/104.png)
+
+**Links:**
+
+1. https://cloud.google.com/identity/docs/overview
+
 <hr />
 
 **Question 105**
