--- a/study-app/q1-99.md
+++ b/study-app/q1-99.md
@@ -2422,6 +2422,40 @@ D: Create a HAProxy pod in the cluster to load-balance the traffic to all the po
 
 Answer: A
 
-- https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
+```
+// 1. Create a container cluster
+gcloud container clusters create loadbalancedcluster
 
-- https://medium.com/google-cloud/kubernetes-nodeport-vs-loadbalancer-vs-ingress-when-should-i-use-what-922f010849e0
+// 2.Deploying a web application
+// load-balancing/web-deployment.yaml
+// Apply the resource to the cluster:
+kubectl apply -f web-deployment.yaml
+
+// 3. Exposing your Deployment inside your cluster
+// load-balancing/web-service.yaml
+kubectl apply -f web-service.yaml
+NAME      TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)          AGE
+web       NodePort   10.35.245.219   <none>        8080:32640/TCP   5m
+
+//---
+In the sample output, the node port for the web Service is 32640. Also, note that there is no external IP allocated for this Service. Since the GKE nodes are not externally accessible by default, creating this Service does not make your application accessible from the internet.
+
+//---
+To make your HTTP(S) web server application publicly accessible, you must create an Ingress resource.
+
+// 4. Creating an Ingress resource
+// load-balancing/basic-ingress.yaml
+// Apply the resource to the cluster:
+kubectl apply -f basic-ingress.yaml
+
+// 5. Visiting your application
+
+kubectl get ingress basic-ingress
+NAME            HOSTS     ADDRESS         PORTS     AGE
+basic-ingress   *         203.0.113.12    80        2m
+```
+
+**Links:**
+
+1. https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
+2. https://medium.com/google-cloud/kubernetes-nodeport-vs-loadbalancer-vs-ingress-when-should-i-use-what-922f010849e0
